src/components/Card/BlogCard.css
/* BlogCard.css */
.blog-card {
  width: 400px;
  background:#239E36A1;
  padding: 20px;
  border: 1px solid #ddd;
  border-radius: 4px;
  overflow: hidden;
  color: #fff;
  margin: 10px;
  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1); /* Add a small shadow */
}

.blog-card-img {
  width: 100%;
  height: 200px;
  object-fit: cover;
  border-radius: 4px;
}

.blog-card-content {
  padding: 15px;
  
}

.blog-card-date {
  font-size: 14px;
  color: #2b2145;
}
.blog-card-container{
 background: #fff;
}


.blog-card-title {
  margin: 0;
  margin-bottom: 10px;
  font-size: 20px;
  text-transform: capitalize;
}

.blog-card-excerpt {
  margin: 0;
  color: #fff;
  display: -webkit-box;
  -webkit-line-clamp: 5;
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 16px;
  text-align: left;
}

.blog-card-readmore {
  display: inline-block;
  margin-top: 15px;
  color: #1b203e;
  text-decoration: none;
  font-weight: 600;
}
@media only screen and (max-width: 768px) {
  .blog-card {
    width: 100%; 
    max-width: 400px; 
  }

  .blog-card-img {
    height: auto; 
  }
  .blog-card-content {
    font-size: 1.5rem;
    width: 100%;
  }
  .blog-card-date{
    font-size: 1.5rem;
    color: #9af3c8;
  }
}
@media only screen and (max-width: 430px) {
  .blog-card{
    width: 100%;
    display: flex;
    flex-direction: column;
  }

  .blog-card-img {
    height: auto; /* Allow image height to adjust */
  }

  .blog-card-content {
    font-size: 1.5rem; 
    width: 100%; 
  }

  .blog-card-date {
    font-size: 1.5rem; /* Adjust date font size */
    color: #43ed9b; /* Change date color */
  }
}

